# LLM-RAG-Example

./: .env.example  README.md  README_2.md  pyproject.toml
.github/: CODEOWNERS
qdrant_storage/: raft_state.json
qdrant_storage/collections/3b3f0471c21244d985b9d6061a13fb03/0/segments/211b1fea-83f9-43e7-a8c2-46d59ed5f37c/: IDENTITY  LOG
qdrant_storage/collections/3b3f0471c21244d985b9d6061a13fb03/0/segments/4be606ec-0ce7-4fbe-9a08-e700c315dff1/: IDENTITY  LOG
qdrant_storage/collections/3b3f0471c21244d985b9d6061a13fb03/0/segments/5ff1d23f-60df-4988-b164-abe1c8214d64/: IDENTITY  LOG
qdrant_storage/collections/3b3f0471c21244d985b9d6061a13fb03/0/segments/a1037184-d171-4fe9-9898-8e2ac2b0a68c/: IDENTITY  LOG
qdrant_storage/collections/3b3f0471c21244d985b9d6061a13fb03/0/segments/a1ef6934-7e8a-4552-ac93-7ba4c0dcbd31/: 000017.sst  000018.sst  000019.sst  000020.sst  IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/3b3f0471c21244d985b9d6061a13fb03/0/segments/be478740-2209-48be-9303-bead7dccc545/: IDENTITY  LOG
qdrant_storage/collections/3b3f0471c21244d985b9d6061a13fb03/0/segments/c481760f-b9a2-4d3e-81b3-e2320761794b/: IDENTITY  LOG
qdrant_storage/collections/3b3f0471c21244d985b9d6061a13fb03/0/segments/c77f6474-8529-4274-a028-d453e0404651/: IDENTITY  LOG
qdrant_storage/collections/resumes_test/0/: replica_state.json
src/sechallenge/: api.py  api_newer.py  api_old.py  neural_searcher.py  service.py
src/sechallenge/qdrant_storage/: raft_state.json
src/sechallenge/qdrant_storage/collections/resumes_test/: config.json
tests/: test_api.py
(+777 files in other folders)
